Fix layout issue

--- a/src/assets/styles/base/_base.scss
+++ b/src/assets/styles/base/_base.scss
@@ -8,7 +8,6 @@
 
 body {
   box-sizing: border-box;
-  -webkit-user-drag: none;
 }
 
 a {
